<resources>
    <string name="app_name">GuessTheMovie Game</string>
    <string name="enter_name">Enter name.</string>
    <string name="button">Button</string>
    <string name="guess_the_movies_year">Guess The Movies Year!</string>
    <string name="settings">Settings</string>
    <string name="highscores">HighScores</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="select_a_genre">Select a Genre!</string>
    <string name="horror">Horror</string>
    <string name="comedy">Comedy</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
</resources>