<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="399dp"
        android:layout_height="271dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonHorror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horror"
            android:textColor="#C5CAE9" />

        <RadioButton
            android:id="@+id/radioButtonComedy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comedy"
            android:textColor="#C5CAE9" />

        <RadioButton
            android:id="@+id/radioButtonAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textColor="#C5CAE9" />

        <RadioButton
            android:id="@+id/radioButtonAdventure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adventure"
            android:textColor="#C5CAE9" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveButtonClicked"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_genre"
        android:textColor="#B39DDB"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />
</androidx.constraintlayout.widget.ConstraintLayout>